# polya-gamma

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: vec_par.rs
benches/comparison/: benchmark.R  benchmark.rs  compare.py  convert.py  run_benchmarks.sh
benches/comparison/plots/: summary.txt
benches/comparison/results/: bayeslogit_results.csv  rust_bench_output.csv  rust_bench_output.txt
examples/: logistic_regression.rs  negbin_regression.rs
examples/reference_implementation/: README.md  check.R  reference.rs  run_all.sh
examples/reference_implementation/results/: pg_comparison_results.txt
src/: devroye.rs  lib.rs  rng.rs
src/regression/: logit.rs  mod.rs  negative_binomial.rs
tests/: pg_selftest.rs
